--- a/UserInterface/MainWindow.xaml
+++ b/UserInterface/MainWindow.xaml
@@ -170,6 +170,7 @@
 
         <Grid Grid.Row="1" Grid.Column="0" Margin="20,66,20,10" Background="#FF5E5E5E">
             <ContentControl Content="{Binding CurrentMeshViewModel}"/>
+            <Label Content="{Binding SwitchLabel1}" BorderBrush="Black" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,602,583,0" HorizontalAlignment="Right" Width="59" Height="27" VerticalAlignment="Top"/>
             <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="-12,0,1255,592" HorizontalAlignment="Right" Width="231" Height="27" VerticalAlignment="Bottom">Mesh Eletricity</Label>
             <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,920,588" HorizontalAlignment="Right" Width="237" Height="27" VerticalAlignment="Bottom">Mesh Power</Label>
             <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,432,584" HorizontalAlignment="Right" Width="141" Height="27" VerticalAlignment="Bottom">Fluid Level</Label>
